--- a/index.html
+++ b/index.html
@@ -10,24 +10,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="style.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
 
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script src="./js/blocs.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js"
+		defer></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.25/gmaps.min.js"></script>
 
 	<title>La chouette agence, agence web basée à Lyon</title>
-
-
-	<!-- Analytics -->
-
-	<!-- Analytics END -->
 
 </head>
 
@@ -39,7 +35,7 @@
 		<header id="bloc-0">
 			<nav class="container  navbar row">
 				<div class="navbar-header">
-					<a class="navbar-logo" href="index.html" title="Logo"><img src="img/la-chouette-agence-logo.png"
+					<a class="navbar-logo" href="index.html" title="Logo"><img src="img/la-chouette-agence-logo.jpg"
 							alt="La chouette agence logo" /></a>
 					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse"
 						data-target=".navbar-1">
@@ -65,7 +61,7 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
-							<img src="img/logo_rond.png" class="center-block image-resize-mode" width="100"
+							<img src="img/logo-rond.png" class="center-block image-resize-mode" width="100"
 								alt="La chouette agence logo rond" />
 							<h1 class="text-center hero-bloc-text tc-white ">
 								La chouette agence.
@@ -87,13 +83,16 @@
 			<!-- bloc-1-presentation END -->
 
 			<!-- bloc-2-services -->
+
 			<div class="bloc bgc-white l-bloc" id="bloc-2-services">
 				<div class="container bloc-md">
-					<div class="row">
-						<div class="col-sm-12 text-center">
-							<!--change text -->
-						</div>
+
+					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+						<h2>La chouette agence est une agence de web design qui aide les entreprises à devenir
+							attractives
+							et visibles sur internet.</h2>
 					</div>
+
 					<div class="row voffset-lg med-width-whitespace">
 						<div class="col-sm-4">
 							<div class="text-center">
@@ -134,14 +133,18 @@
 							</p>
 						</div>
 					</div>
-					<div class="row voffset-lg voffset">
-						<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-							<!--change text -->
 
-						</div>
+					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+						<h2><cite>"La chouette agence est une excellente agence web! Les web designers ont réussi à
+								capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous à
+								aidé à
+								doubler nos ventes en ligne à Lyon."</cite></h2>
+						<p class="nom-auteur">Maxim Guibard, PDG de À vos fourchettes</p>
 					</div>
+
 				</div>
 			</div>
+
 			<!-- bloc-2-services END -->
 
 			<!-- bloc-3-what-i-do -->
@@ -180,7 +183,9 @@
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<!--change text -->
+							<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+								<h2>Nous travaillons avec beaucoup des clients, voici nos réalisations.</h2>
+							</div>
 						</div>
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
@@ -211,9 +216,9 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/creation-site-voyageur.bmp" data-gallery-id="gallery-1"
+							<a href="#" data-lightbox="img/creation-site-voyageur.jpg" data-gallery-id="gallery-1"
 								data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"
-								title="Création site pour voyageur"><img src="img/creation-site-voyageur.bmp"
+								title="Création site pour voyageur"><img src="img/creation-site-voyageur.jpg"
 									class="img-responsive portfolio-thumb" alt="Création site pour voyageur" /></a>
 							<h3 class="mg-md text-center">
 								Création d'un site internet pour un voyageur
@@ -224,9 +229,9 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/site-agenge-mariage.bmp" data-gallery-id="gallery-1"
+							<a href="#" data-lightbox="img/site-agenge-mariage.jpg" data-gallery-id="gallery-1"
 								data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"
-								title="Conception site pour agence mariage"><img src="img/site-agenge-mariage.bmp"
+								title="Conception site pour agence mariage"><img src="img/site-agenge-mariage.jpg"
 									class="img-responsive portfolio-thumb"
 									alt="Conception site pour agence mariage" /></a>
 							<h3 class="mg-md text-center">
@@ -293,13 +298,16 @@
 											class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
-							<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design,
-								illustrations, design de site web, site web, web, internet, site internet, site</div>
 						</div>
 					</div>
 				</div>
 			</div>
+			<!-- ScrollToTop Button -->
+			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')" title="Scroll"><span
+					class="fa fa-chevron-up"></span></a>
+			<!-- ScrollToTop Button END-->
 		</footer>
+
 		<!-- Footer - bloc-8 END -->
 
 	</section>
