--- a/contact.html
+++ b/contact.html
@@ -14,177 +14,152 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
+	<title>Agence web bassé à Lyon</title>
+</head>
 
+<body>
+	<header>
+		<nav class="container navbar row">
+			<div class="navbar-header">
+				<a class="navbar-logo" href="index.html" title="Logo"><img src="img/la-chouette-agence-logo.png"
+						alt="La chouette agence web logo " /></a>
+				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse"
+					data-target=".navbar-1">
+					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
+						class="icon-bar"></span><span class="icon-bar"></span>
+				</button>
+				<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+					<ul class="site-navigation nav navbar-nav">
+						<li>
+							<a href="index.html" title="Accueil">Accueil</a>
+						</li>
+						<li>
+							<a href="contact.html" title="Contact">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<div class="bloc bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+			<div class="container bloc-lg">
+				<div class="row">
+					<div class="col-sm-12">
+						<h1 class="text-center hero-bloc-text tc-white">
+							Parlons web design !
+						</h1>
+						<p class="text-center mg-lg tc-white tight-width-whitespace">
+							Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
+							Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+
+	<main>
+
+		<!-- bloc-6 END -->
+
+		<!-- bloc-7 -->
+		<div class="bloc bgc-white l-bloc" id="bloc-7">
+			<div class="container bloc-lg">
+				<div class="row">
+					<div class="col-sm-6">
+						<form id="form_1" novalidate>
+							<div class="form-group">
+								<label>
+									Nom
+								</label>
+								<input id="name" class="form-control" required />
+							</div>
+							<div class="form-group">
+								<label>
+									Adresse email
+								</label>
+								<input id="email" class="form-control" type="email" required />
+							</div>
+							<div class="form-group">
+								<label>
+									Comment nous avez-vous connu ?
+								</label>
+								<input class="form-control" type="email" required id="input_504" />
+							</div>
+							<div class="form-group">
+								<label>
+									Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+								</label><textarea id="message" class="form-control" rows="4" cols="50"
+									required></textarea>
+							</div>
+							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine"
+								type="submit">
+								Envoyer
+							</button>
+						</form>
+					</div>
+					<div class="col-sm-6">
+						<p>
+							contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du
+							lundi
+							au vendredi<br>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- bloc-7 END -->
+	</main>
+
+	<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		<div class="container bloc-sm">
+			<div class="row">
+				<div class="col-sm-12">
+					<p class="text-center white">
+						La chouette agence - Agence web basée à Lyon.<br>
+					</p>
+					<div class="row row-no-gutters social">
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="https://www.twitter.com/" title="Twitter"><span
+										class="fa fa-twitter icon-md"></span>Twitter</a>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="https://www.facebook.com/" title="Facebook"><span
+										class="fa fa-facebook icon-md"></span>Facebook</a>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="https://www.dribble.com/" title="Dribbble"><span
+										class="fa fa-dribbble icon-md"></span>Dribbble</a>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="https://www.instagram.com/" title="instagram"><span
+										class="fa fa-instagram icon-md"></span>Instagram</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- ScrollToTop Button -->
+		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')" title="Scroll"><span
+				class="fa fa-chevron-up"></span></a>
+		<!-- ScrollToTop Button END-->
+	</footer>
+
+	<!--JS scripts-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script src="./js/blocs.min.js"></script>
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/jqBootstrapValidation/1.3.6/jqBootstrapValidation.min.js"></script>
 	<script src="./js/formHandler.min.js"></script>
-
-
-
-
-	<title>Agence web bassé à Lyon</title>
-
-
-	<!-- Analytics -->
-
-	<!-- Analytics END -->
-
-</head>
-
-<body>
-	<!-- Principal conteneur -->
-	<section class="page-container">
-
-		<!-- header -->
-		<header>
-			<nav class="container navbar row">
-				<div class="navbar-header">
-					<a class="navbar-logo" href="index.html" title="Logo"><img src="img/la-chouette-agence-logo.jpg"
-							alt="La chouette agence web logo " /></a>
-					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse"
-						data-target=".navbar-1">
-						<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
-							class="icon-bar"></span><span class="icon-bar"></span>
-					</button>
-					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-						<ul class="site-navigation nav navbar-nav">
-							<li>
-								<a href="index.html" title="Accueil">Accueil</a>
-							</li>
-							<li>
-								<a href="contact.html" title="Contact">Contact</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</nav>
-			<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper"
-				id="bloc-6">
-				<div class="container bloc-lg">
-					<div class="row">
-						<div class="col-sm-12">
-							<h1 class="text-center hero-bloc-text tc-white">
-								Parlons web design !
-							</h1>
-							<p class="text-center mg-lg tc-white tight-width-whitespace">
-								Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
-								Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</header>
-		<!-- header END -->
-
-		<!-- bloc-6 -->
-		<main>
-
-			<!-- bloc-6 END -->
-
-			<!-- bloc-7 -->
-			<div class="bloc bgc-white l-bloc" id="bloc-7">
-				<div class="container bloc-lg">
-					<div class="row">
-						<div class="col-sm-6">
-							<form id="form_1" novalidate success-msg="Your message has been sent."
-								fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
-								<div class="form-group">
-									<label>
-										Nom
-									</label>
-									<input id="name" class="form-control" required />
-								</div>
-								<div class="form-group">
-									<label>
-										Adresse email
-									</label>
-									<input id="email" class="form-control" type="email" required />
-								</div>
-								<div class="form-group">
-									<label>
-										Comment nous avez-vous connu ?
-									</label>
-									<input class="form-control" type="email" required id="input_504" />
-								</div>
-								<div class="form-group">
-									<label>
-										Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-									</label><textarea id="message" class="form-control" rows="4" cols="50"
-										required></textarea>
-								</div>
-								<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine"
-									type="submit">
-									Envoyer
-								</button>
-							</form>
-						</div>
-						<div class="col-sm-6">
-							<p>
-								contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du
-								lundi
-								au vendredi<br>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- bloc-7 END -->
-		</main>
-		<!-- ScrollToTop Button END-->
-
-
-		<!-- Footer - bloc-8 -->
-		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-			<div class="container bloc-sm">
-				<div class="row">
-					<div class="col-sm-12">
-						<p class="text-center white">
-							La chouette agence - Agence web basée à Lyon.<br>
-						</p>
-						<div class="row row-no-gutters social">
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="https://www.twitter.com/" title="Twitter"><span
-											class="fa fa-twitter icon-md"></span></a>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="https://www.facebook.com/" title="Facebook"><span
-											class="fa fa-facebook icon-md"></span></a>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="https://www.dribble.com/" title="Dribbble"><span
-											class="fa fa-dribbble icon-md"></span></a>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="https://www.instagram.com/" title="instagram"><span
-											class="fa fa-instagram icon-md"></span></a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- ScrollToTop Button -->
-			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')" title="Scroll"><span
-					class="fa fa-chevron-up"></span></a>
-			<!-- ScrollToTop Button END-->
-		</footer>
-		<!-- Footer - bloc-8 END -->
-
-	</section>
-	<!-- Principal conteneur END -->
-
-
+	<!--JS scripts END-->
 </body>
 
 </html>
